integration test cardService on getCollection by tags
